# iceberg-cpp

./: .asf.yaml  .clang-tidy  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build  meson.options  sitemap.xml
.github/: copilot-instructions.md  dependabot.yml
api/: aggregate_8h_source.html  annotated.html  arrow__file__io_8h_source.html  arrow__register_8h.html  auth__manager_8h.html  auth__manager__internal_8h_source.html  avro__constants_8h.html  avro__direct__decoder__internal_8h_source.html  avro__reader_8h.html  avro__reader_8h_source.html  avro__register_8h_source.html  avro__schema__util__internal_8h_source.html  binder_8h_source.html  bucket__util_8h_source.html  catalog_2rest_2type__fwd_8h.html  catalog_8h_source.html  catalog__properties_8h.html  catalog__store_8h_source.html  cerr__logger_8h.html  classes.html  classiceberg_1_1AddedRowsScanTask-members.html  classiceberg_1_1Aggregate.html  classiceberg_1_1And-members.html  classiceberg_1_1And.html  classiceberg_1_1ArrayLike-members.html  classiceberg_1_1ArrayLike.html  classiceberg_1_1ArrowArrayStructLike.html  classiceberg_1_1AssignFreshIdVisitor.html  classiceberg_1_1Base64-members.html  classiceberg_1_1BaseInheritableMetadata-members.html  classiceberg_1_1Bound-members.html  classiceberg_1_1Bound.html  classiceberg_1_1BoundAggregate-members.html  classiceberg_1_1BoundAggregate.html  classiceberg_1_1BoundLiteralPredicate.html  classiceberg_1_1BoundPredicate-members.html  classiceberg_1_1BoundPredicate.html  classiceberg_1_1BoundReference.html  classiceberg_1_1BoundSetPredicate.html  classiceberg_1_1BoundUnaryPredicate.html  (+538 more)
cmake_modules/: IcebergBuildUtils.cmake  IcebergSccache.cmake  (+1 more)
mkdocs/: Doxyfile  (+2 more)
src/iceberg/benchmark/: CMakeLists.txt  benchmark_smoke.cc  meson.build
(+3709 files in other folders)
